<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MyApplication"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/description"
        android:scaleType="fitXY"
        android:src="@drawable/possum_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.cardview.widget.CardView
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="1dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/PossumWhite"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <Button
            android:id="@+id/helpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/PossumWhite"
            android:backgroundTintMode="src_over"
            android:fontFamily="@font/inconsolata"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="\?"
            android:textAlignment="center"
            android:textColor="@color/PossumBlue"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bordered"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/myTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inconsolata"
                android:text="@string/possum"
                android:textColor="@color/PossumBlue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/updateLock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/inconsolata"
                android:text="@string/update_lock_wallpaper"
                android:textColor="@color/PossumBlue"
                android:theme="@style/ThemeOverlay.MySwitchCompat"
                app:track="@drawable/track" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/updateSys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/inconsolata"
                android:text="@string/update_system_wallpaper"
                android:textColor="@color/PossumBlue"
                android:theme="@style/ThemeOverlay.MySwitchCompat"
                app:track="@drawable/track" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/scaleImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/inconsolata"
                android:text="@string/scale_imgs"
                android:textColor="@color/PossumBlue"
                android:theme="@style/ThemeOverlay.MySwitchCompat"
                app:track="@drawable/track" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/inconsolata"
                android:text="@string/active"
                android:textColor="@color/PossumBlue"
                android:theme="@style/ThemeOverlay.MySwitchCompat"
                app:track="@drawable/track" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="29dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="1dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/PossumBlue"
                    app:cardCornerRadius="30dp">

                    <Button
                        android:id="@+id/update"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/PossumBlue"
                        android:backgroundTintMode="src_over"
                        android:fontFamily="@font/inconsolata"
                        android:gravity="center"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/update_now"
                        android:textAlignment="center"
                        android:textColor="@color/PossumWhite"
                        app:iconPadding="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="0dp"
                    android:layout_height="29dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/PossumBlue"
                    app:cardCornerRadius="30dp">

                    <Button
                        android:id="@+id/save"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/PossumBlue"
                        android:fontFamily="@font/inconsolata"
                        android:gravity="center"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/save_possum"
                        android:textAlignment="center"
                        android:textColor="@color/PossumWhite"
                        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/updateTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/bordered"
            android:fontFamily="@font/inconsolata"
            android:gravity="center"
            android:text="*time updated*"
            android:textColor="@color/PossumBlue" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>